--- a/vote-ui-deployment.yaml
+++ b/vote-ui-deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: vote-ui
     spec:
       containers:
-      - image: docker.io/danylokaras/vote
+      - image: docker.io/danylokaras/vote:latest
         name: vote-ui
         ports:
         - containerPort: 80
